dashboard: cancel tasks + preserve selection
- Preserve Send Task selections under auto-refresh

- Add cancel task (skipped receipt, no delete)

- Show agent role/kind labels to reduce confusion

--- a/scripts/dashboard/public/index.html
+++ b/scripts/dashboard/public/index.html
@@ -52,6 +52,10 @@
                 <div class="detail__content hidden" id="taskDetail">
                   <div class="detail__title" id="taskTitle"></div>
                   <div class="detail__meta" id="taskMeta"></div>
+                  <div class="detail__actions">
+                    <button class="btn btn--danger" id="cancelTaskBtn" type="button">Cancel task</button>
+                    <div class="hint" id="cancelHint"></div>
+                  </div>
                   <pre class="detail__markdown" id="taskMarkdown"></pre>
 
                   <div class="detail__update">
@@ -128,4 +132,3 @@
     <script src="/app.js" type="module"></script>
   </body>
 </html>
-
